# video-tihuan2

./: .gitignore  README.md  index.html  package-lock.json  package.json  requirements.txt  vite.config.ts
.github/workflows/: build-windows.yml  release-apps.yml
docs/superpowers/plans/: 2026-05-25-chroma-key-video-replacement.md
docs/superpowers/specs/: 2026-05-25-chroma-key-video-replacement-design.md
engine/: __init__.py  __main__.py  api_server.py  file_dialog.py  pipeline.py  schemas.py  simple_server.py
packaging/: video-tihuan-engine.spec
scripts/: build-sidecar.sh  dev.sh  smoke-sidecar-audio.py
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: api.test.ts  api.ts  keyframes.test.ts  keyframes.ts  quad.test.ts  quad.ts  settings.test.ts  settings.ts  types.ts  workflow.test.ts  workflow.ts
src/styles/: app.css
tests/: test_engine.py
