[package]
name = "video-tihuan"
version = "0.1.2"
description = "AI-assisted planar video replacement"
authors = ["video-tihuan"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "video_tihuan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
